--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/bd5ca811e0.js" crossorigin="anonymous"></script>
+
     <title>Langing Page Flia</title>
 
 <style>
@@ -114,7 +116,7 @@ body{
   <footer>
   
     <div class="container">
-  <div class="row">
+  <div class="row ">
   <div class="col-lg-6 col-md-6 col-sm-12">
   
     <div class="formularioContacto">
@@ -153,12 +155,23 @@ body{
      van a poder asesorar en este 
      hermoso camino al éxito.</p>
   </div>
+
+  <div class="redesContacto text-center">
+    <a href="#" ><i class="fa-brands fa-whatsapp "></i></a>
+    <a href="#" ><i class="fa-brands fa-instagram "></i></a>
+    <a href="#" ><i class="fa-brands fa-facebook-f "></i></a>    
+   </div>
+
   </div>
+
+  <div class="linksDerechos border-3 border-top border-dark">
+    <div class="mt-3 mb-3"> <a href="" class="p-2 border-3 border-end border-dark"> © 2023 Flia </a>
+        <a href="" class="p-2 border-3 border-end border-dark"> Politicas de privacidad</a>
+        <a href="" class="p-2 "> Terminos de servicio </a></div>  
+  </div>
+
     </div>
   </footer>
-
-
-
 
     <script src="script/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
