--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
     </div>
   </nav> 
   
-  <div class="container">
-    <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block">
-    <h1 class="text-center">Somos flia. Familia de diseño</h1>
-    <h2 class="text-center">10 años</h2>
-  
+  <div class="container" id="somosFlia">
+    <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block mb-5">
+    <h1 class="text-center mb-5">Somos flia. Familia de diseño</h1>
+    <h1 class="text-center bold mb-5">10 años</h1>
     <div class="row">
-      <h3 class="text-center">Productos</h3>
+      <h2 class="text-center bold">Productos</h2>
     </div>
-  
     <div class="row">
       <div class="col-xl-6 col-lg-6">
       <h4>¿Quienes somos? </h4>
