--- a/index.html
+++ b/index.html
@@ -30,11 +30,53 @@
   </nav> 
   
   <div class="container" id="somosFlia">
-    <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block mb-5">
+    <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block mb-5" id="logoflia">
     <h1 class="text-center mb-5">Somos flia. Familia de diseño</h1>
     <h1 class="text-center bold mb-5">10 años</h1>
-    <div class="row">
-      <h2 class="text-center bold">Productos</h2>
+    <h2 class="text-center bold mb-5">Productos</h2>
+      
+    <div class="container-carusel">
+      <div class="slider">
+        <div class="item">
+          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/bandeja desayuno 01.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Contenedor 01.jpg" alt="">
+        </div>
+        <div class="item">
+        <img src="Imagenes/pata75 01.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Manopla simple 01.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Mate 02.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Repasador 02.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+        </div>
+        <div class="item">
+          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+        </div>
+      </div>
+      <div>
+        <button id="prev"><</button>
+        <button id="next">></button>
+      </div>
+    </div>
+    
     </div>
     <div class="row">
       <div class="col-xl-6 col-lg-6">
@@ -51,7 +93,6 @@
         convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
       </div>
     </div>
-  </div>
   
   <div class="container-fluid " id="diezAños" >
     <div class="container">
