--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div>
-        <button id="prev"><</button>
+        <button id="prev"></button>
         <button id="next">></button>
       </div>
     </div>
@@ -108,22 +108,22 @@
       <div class="row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         
-          <div class="formularioDescuento">
+          <form id="formDescuento" method="post" novalidate="">
             <h4>Accede a tu descuento</h4>
             <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Gustavo">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombre" name="nombre">
             </div>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Cerati">
+              <input type="text" class="form-control" id="apellido" name="apellido">
             </div>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Mail</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="JustaCerati@gamil.com">
+              <input type="email" class="form-control" id="email" name="email">      
             </div>
-            <button type="button" class="btn btn-primary rounded-pill border-0 ">Enviar</button>   
-          </div>  
+            <button id="btnEnviarDescuento" type="button" class="btn btn-primary rounded-pill border-0 ">Enviar</button>  
+          </form>  
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
           <h4>¿ Como obtener el descuento ?</h4>
@@ -138,30 +138,31 @@
     <div class="container">
       <div class="row ">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="formularioContacto">
+
+          <form id="formContacto" method="post" novalidate="">
             <div class="mb-2">
-              <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Gustavo">
+              <label for="nombreContacto" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombreContacto" name="nombreContacto">
             </div>
             <div class="mb-2">
-              <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Cerati">
+              <label for="apellidoContacto" class="form-label">Apellido</label>
+              <input type="text" class="form-control" id="apellidoContacto" name="apellidoContacto">
             </div>
             <div class="mb-2">
-              <label for="exampleFormControlInput1" class="form-label">Mail</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="GustaCerati@gmail.com">
+              <label for="emailContacto" class="form-label">Mail</label>
+              <input type="email" class="form-control" id="emailContacto" name="emailContacto">      
             </div>
             <div class="mb-2">
-              <label for="exampleFormControlInput1" class="form-label">Telefono</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="+549221302516">
+              <label for="telefonoContacto" class="form-label">Telefono</label>
+              <input type="text" class="form-control" id="telefonoContacto" name="telefonoContacto">      
             </div>
-    
             <div class="mb-2">
-              <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <label for="mensaje" class="form-label">Mensaje</label>
+              <textarea class="form-control" id="mensaje" name="mensaje" rows="3"></textarea>
             </div>
-            <button type="button" class="btn btn-primary border-0 ">Enviar</button>   
+            <button id="btnEnviarContacto" type="button" class="btn btn-primary border-0 ">Enviar</button>   
           </div>
+
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"> 
           <h4>¿ Contas con una pyme 
@@ -189,9 +190,11 @@
       </div>
     </div>
   </footer>
-
-  <script src="script/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="script/traduccionesValidate.js"></script>
+  <script src="script/main.js"></script>
 
 </body>
 </html>
