--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
     <h3 class="text-center">Contacto</h3>
   </div>
   
-  <footer>
-    <div class="container">
-      <div class="row ">
+  <footer class="container">
+          <div class="row ">
         <div class="col-lg-6 col-md-6 col-sm-12">
 
           <form id="formContacto" method="post" novalidate="">
@@ -182,8 +181,7 @@
           <a href="#" ><i class="fa-brands fa-facebook-f "></i></a>    
         </div>
 
-      </div>
-
+      
       <div class="linksDerechos border-3 border-top border-dark">
         <div class="mt-3 mb-3"> <a href="" class="p-2 border-3 border-end border-dark"> © 2023 Flia </a>
           <a href="" class="p-2 border-3 border-end border-dark"> Politicas de privacidad</a>
