Agregue estilos al bnt  del nav, le hice un link; agregue estilos al footer..

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav align-items-center">
-          <a class="nav-link bg-white" aria-current="page" href="#">Quienes somos</a>
-          <a class="nav-link bg-white" href="#">Productos</a>
-          <a class="nav-link bg-white" href="#">Contacto</a>                   
+          <a class="nav-link bg-white border-3 border-dark border-end" aria-current="page" href="#">Quienes somos</a>
+          <a class="nav-link bg-white border-3 border-dark border-end" href="#">Productos</a>
+          <a class="nav-link bg-white " href="#">Contacto</a>                   
         </div>
       </div>
-      <button type="button" class="btnLogin rounded-pill border-0 float-end">Obtene tu descuento</button>   
+      <a  class="p-2 rounded-pill bg-black text-white text-decoration-none border-0 float-end" href="#obteneDescuento">Obtene tu descuento</a>   
     </div>
   </nav> 
   
@@ -78,7 +78,7 @@
     </div>
     
     <div class="row">
-      <div class="col-xl-6 col-lg-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
       <h4>¿Quienes somos? </h4>
       <p>Somos flia, Familia de diseño.
       Una familia de diseño en la que cada 
@@ -86,7 +86,7 @@
       y producir objetos que además 
       de ser útiles sean funcionales y prácticos.</p>
       </div>
-      <div class="col-xl-6 col-lg-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
         <h4>Bases y valores</h4>
         <p>Somos una familia que crece día a día permitiendo de esta forma abrir un abanico de posibilidades realzando el valor del diseño, 
         convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
@@ -183,9 +183,9 @@
 
       
       <div class="linksDerechos border-3 border-top border-dark">
-        <div class="mt-3 mb-3"> <a href="" class="p-2 border-3 border-end border-dark"> © 2023 Flia </a>
-          <a href="" class="p-2 border-3 border-end border-dark"> Politicas de privacidad</a>
-          <a href="" class="p-2 "> Terminos de servicio </a>
+        <div class="mt-3 mb-3"> <a href="" class="p-2 border-3 border-end border-dark bg-transparent text-dark text-decoration-none"> © 2023 Flia </a>
+          <a href="" class="p-2 border-3 border-end border-dark bg-transparent text-dark text-decoration-none"> Politicas de privacidad</a>
+          <a href="" class="p-2  bg-transparent text-dark text-decoration-none"> Terminos de servicio </a>
         </div>  
       </div>
     </div>
