Agregue Query en la hoa de estilos, agregue estilos a los botones..

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-      <h4>¿Quienes somos? </h4>
+      <h4 class="text-center">¿Quienes somos? </h4>
       <p>Somos flia, Familia de diseño.
       Una familia de diseño en la que cada 
       integrante aporta lo mejor de sí para crear
@@ -87,7 +87,7 @@
       de ser útiles sean funcionales y prácticos.</p>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-        <h4>Bases y valores</h4>
+        <h4 class="text-center">Bases y valores</h4>
         <p>Somos una familia que crece día a día permitiendo de esta forma abrir un abanico de posibilidades realzando el valor del diseño, 
         convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
       </div>
@@ -111,7 +111,7 @@
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         
           <form id="formDescuento" method="post" novalidate="">
-            <h4>Accede a tu descuento</h4>
+            <h4 class="text-center">Accede a tu descuento</h4>
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre</label>
               <input type="text" class="form-control" id="nombre" name="nombre">
@@ -124,11 +124,11 @@
               <label for="exampleFormControlInput1" class="form-label">Mail</label>
               <input type="email" class="form-control" id="email" name="email">      
             </div>
-            <button id="btnEnviarDescuento" type="button" class="btn btn-primary rounded-pill border-0 ">Enviar</button>  
+            <button id="btnEnviarDescuento" type="button" class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 ">Enviar</button>  
           </form>  
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-          <h4>¿ Como obtener el descuento ?</h4>
+          <h4 class="text-center">¿ Como obtener el descuento ?</h4>
           <p>Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro catalogo con todos los productos de Flia</p>
         </div>    
       </div>    
@@ -164,7 +164,7 @@
             <button id="btnEnviarContacto" type="button" class="btn btn-primary border-0 ">Enviar</button>   
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12"> 
-            <h4>¿ Contas con una pyme 
+            <h4 class="text-center">¿ Contas con una pyme 
             o servicio de venta al 
             por mayor ?</h4>
             <p>Escribinos un mail con tus datos y teléfono
