--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
         </div>
       </div>
       <div>
-        <button id="prev"></button>
+        <button id="prev"><</button>
         <button id="next">></button>
       </div>
     </div>
     
     </div>
     <div class="row">
-      <div class="col-xl-6 col-lg-6">
+      <div class="col-xl-6 col-lg-6 text-center" >
       <h4>¿Quienes somos? </h4>
       <p>Somos flia, Familia de diseño.
       Una familia de diseño en la que cada 
@@ -87,15 +87,15 @@
       y producir objetos que además 
       de ser útiles sean funcionales y prácticos.</p>
       </div>
-      <div class="col-xl-6 col-lg-6">
+      <div class="col-xl-6 col-lg-6 text-center">
         <h4>Bases y valores</h4>
         <p>Somos una familia que crece día a día permitiendo de esta forma abrir un abanico de posibilidades realzando el valor del diseño, 
         convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
       </div>
     </div>
   
-  <div class="container-fluid " id="diezAños" >
-    <div class="container">
+  <div class="container-fluid" id="diezAños">
+    <div class="container text p-5">
       <h3 class="text-center">Flia cumple 10 años y 
       queremos festejarlo con ustedes</h3>
     </div>
@@ -103,7 +103,7 @@
 
   <div class="container-fluid" id="obteneDescuento">
     <div class="container">
-      <h2 class="text-center">Festeja con nosotros y accede a un 25% de descuento 
+      <h2 class="text-center py-5">Festeja con nosotros y accede a un 25% de descuento 
       en todos nuestros productos</h2>
       <div class="row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
@@ -125,7 +125,7 @@
             <button id="btnEnviarDescuento" type="button" class="btn btn-primary rounded-pill border-0 ">Enviar</button>  
           </form>  
         </div>
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
           <h4>¿ Como obtener el descuento ?</h4>
           <p>Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro catalogo con todos los productos de Flia</p>
         </div>    
