Agregue otro query y estilos

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         
           <form id="formDescuento" method="post" novalidate="">
-            <h4 class="text-center">Accede a tu descuento</h4>
+            <h4 class="mb-3 text-center">Accede a tu descuento</h4>
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre</label>
               <input type="text" class="form-control" id="nombre" name="nombre">
