--- a/index.html
+++ b/index.html
@@ -20,22 +20,24 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav align-items-center">
-          <a class="nav-link bg-white border-3 border-dark border-end" aria-current="page" href="#">Quienes somos</a>
-          <a class="nav-link bg-white border-3 border-dark border-end" href="#">Productos</a>
+          <a class="nav-link bg-white border-3 hover" aria-current="page" href="#">Quienes somos</a>
+          <a class="nav-link bg-white border-3 " href="#">Productos</a>
           <a class="nav-link bg-white " href="#">Contacto</a>                   
         </div>
       </div>
-      <a  class="p-2 rounded-pill bg-black text-white text-decoration-none border-0 float-end" href="#obteneDescuento">Obtene tu descuento</a>   
+      <a class="p-2 rounded-pill bg-black text-white text-decoration-none border-0 float-end" href="#obteneDescuento">Obtene tu descuento</a>   
     </div>
   </nav> 
   
   <div class="container" id="somosFlia">
-    <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block mb-5" id="logoflia">
-    <h1 class="text-center mb-5">Somos flia. Familia de diseño</h1>
-    <h1 class="text-center bold mb-5">10 años</h1>
+    <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block" id="logoflia">
+    <h1 class="text-center">Somos flia. Familia de diseño</h1>
+    <h1 class="text-center bold">10 años</h1>
+  </div>
+
     <h2 class="text-center bold mb-5">Productos</h2>
-      
     <div class="container-carusel">
+      <button id="prev"><</button>
       <div class="slider">
         <div class="item">
           <img src="Imagenes/Aromatizante 01.jpg" alt="">
@@ -72,7 +74,6 @@
         </div>
       </div>
       <div>
-        <button id="prev"><</button>
         <button id="next">></button>
       </div>
     </div>
@@ -92,7 +93,7 @@
         convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
       </div>
     </div>
-  </div>
+
  
   
   <div class="container-fluid" id="diezAños">
