Agregue el CONTAINER que le faltaba a un ROW

--- a/index.html
+++ b/index.html
@@ -78,21 +78,25 @@
       </div>
     </div>
     
-    <div class="row">
-      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-        <h4 class="text-center">¿Quienes somos? </h4>
-        <p>Somos flia, Familia de diseño.
-        Una familia de diseño en la que cada 
-        integrante aporta lo mejor de sí para crear
-        y producir objetos que además 
-        de ser útiles sean funcionales y prácticos.</p>
-      </div>
-      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-        <h4 class="text-center">Bases y valores</h4>
-        <p>Somos una familia que crece día a día permitiendo de esta forma abrir un abanico de posibilidades realzando el valor del diseño, 
-        convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
+ <!-- Cada ROW debe estar contenido con un CONTAINER -->
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
+          <h4 class="text-center">¿Quienes somos? </h4>
+          <p>Somos flia, Familia de diseño.
+          Una familia de diseño en la que cada 
+          integrante aporta lo mejor de sí para crear
+          y producir objetos que además 
+          de ser útiles sean funcionales y prácticos.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
+          <h4 class="text-center">Bases y valores</h4>
+          <p>Somos una familia que crece día a día permitiendo de esta forma abrir un abanico de posibilidades realzando el valor del diseño, 
+          convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
+        </div>
       </div>
     </div>
+  
 
  
   
