--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <div class="container-fluid py-3" id="obteneDescuento">
     <div class="container">
-      <h2 class="text-center py-5">Festeja con nosotros y accede a un 25% de descuento
+      <h2 class="text-center py-5" id="festeja">Festeja con nosotros y accede a un 25% de descuento
         en todos nuestros productos</h2>
       <div class="row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
@@ -127,8 +127,8 @@
               class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 ">Enviar</button>
           </form>
         </div>
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-          <h4 class="text-center">¿ Como obtener el descuento ?</h4>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 container-descuento">
+          <h4 class="text-center mb-4">¿ Como obtener el descuento ?</h4>
           <p>Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro
             catalogo con todos los productos de Flia</p>
         </div>
@@ -166,7 +166,8 @@
         </form>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 p-3">
-        <h4 class="text-center">¿ Contas con una pyme
+        <h4 class="text-center">
+          ¿ Contas con una pyme
           o servicio de venta al
           por mayor ?</h4>
         <p>Escribinos un mail con tus datos y teléfono
