--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   </div>
 
     <h2 class="text-center bold mb-5">Productos</h2>
-    <div class="container-carusel">
-      <button id="prev"><</button>
+    <div class="container-carusel" id="containerProductos">
+      <button id="prev"></button>
       <div class="slider">
         <div class="item">
           <img src="Imagenes/Aromatizante 01.jpg" alt="">
@@ -82,16 +82,16 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-          <h4 class="text-center">¿Quienes somos? </h4>
-          <p>Somos flia, Familia de diseño.
+          <h4 class="text-center p-2">¿Quienes somos? </h4>
+          <p class="txtDescripcion">Somos flia, Familia de diseño.
           Una familia de diseño en la que cada 
           integrante aporta lo mejor de sí para crear
           y producir objetos que además 
           de ser útiles sean funcionales y prácticos.</p>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-          <h4 class="text-center">Bases y valores</h4>
-          <p>Somos una familia que crece día a día permitiendo de esta forma abrir un abanico de posibilidades realzando el valor del diseño, 
+          <h4 class="text-center p-2">Bases y valores</h4>
+          <p class="txtDescripcion">Somos una familia que crece día a día permitiendo de esta forma abrir un abanico de posibilidades realzando el valor del diseño, 
           convocando a la experiencia de disfrutar de un objeto e invitando a transmitir un abrazo en el momento de ofrecer un regalo</p>
         </div>
       </div>
