Agregue la img de los productos luego del formulario, agregue estilos

--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
     </div>
     
   </div>
-  
+  <div class="container-fluid bg-white " >
+    <img src="Imagenes/Img-Inicio-01.png" alt="Imagen de los productos" class="img-fluid mt-5 mb-5">
+  </div>
   <footer class="container">
     <h3 class="text-center bold pt-5 pb-3">Contacto</h3>
     <div class="row ">
