--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
               <label for="exampleFormControlInput1" class="form-label">Apellido</label>
               <input type="text" class="form-control" id="apellido" name="apellido">
             </div>
-            <div class="mb-3">
+            <div class="mb-4">
               <label for="exampleFormControlInput1" class="form-label">Mail</label>
               <input type="email" class="form-control" id="email" name="email">
             </div>
             <button id="btnEnviarDescuento" type="button"
-              class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 ">Enviar</button>
+              class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 ">Obtener descuento</button>
           </form>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-          <h4 class="text-center">¿ Como obtener el descuento ?</h4>
+          <h4 class="text-center p-2">¿ Como obtener el descuento ?</h4>
           <p>Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro
             catalogo con todos los productos de Flia</p>
         </div>
@@ -164,15 +164,15 @@
             <label for="telefonoContacto" class="form-label">Telefono</label>
             <input type="text" class="form-control" id="telefonoContacto" name="telefonoContacto">
           </div>
-          <div class="mb-2">
+          <div class="mb-3">
             <label for="mensaje" class="form-label">Mensaje</label>
             <textarea class="form-control" id="mensaje" name="mensaje" rows="3"></textarea>
-          </div class="mb-2">
-          <button id="btnEnviarContacto" type="button" class="btn btn-primary mx-auto d-block rounded-5 border-0 ">Enviar</button>
+          </div>
+          <button id="btnEnviarContacto" type="button" class="btn bg-white mx-auto d-block border-0 ">Enviar</button>
         </form>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 p-3">
-        <h4 class="text-center">¿ Contas con una pyme
+        <h4 class="text-center p-2">¿ Contas con una pyme
           o servicio de venta al
           por mayor ?</h4>
         <p>Escribinos un mail con tus datos y teléfono
