--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/bd5ca811e0.js" crossorigin="anonymous"></script>
-
-    <title>Langing Page Flia</title>
+       <title>Langing Page Flia</title>
 </head>
 <body>
     
@@ -117,15 +115,15 @@
             <h4 class="mb-3 text-center">Accede a tu descuento</h4>
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="nombre" name="nombre">
+              <input type="text" class="form-control border border-secondary-subtle" id="nombre" name="nombre">
             </div>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-              <input type="text" class="form-control" id="apellido" name="apellido">
+              <input type="text" class="form-control border border-secondary-subtle" id="apellido" name="apellido">
             </div>
             <div class="mb-4">
               <label for="exampleFormControlInput1" class="form-label">Mail</label>
-              <input type="email" class="form-control" id="email" name="email">
+              <input type="email" class="form-control border border-secondary-subtle" id="email" name="email">
             </div>
             <button id="btnEnviarDescuento" type="button"
               class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 ">Obtener descuento</button>
@@ -182,9 +180,9 @@
       </div>
     </div>
     <div class="redesContacto text-center">
-      <a href="#"><i class="fa-brands fa-whatsapp "></i></a>
-      <a href="#"><i class="fa-brands fa-instagram "></i></a>
-      <a href="#"><i class="fa-brands fa-facebook-f "></i></a>
+      <a href="#"><img src="Imagenes/whatsapp-brands-black.svg" alt="logo whatsapp" class="iconosRedes"></a>
+      <a href="#"><img src="Imagenes/facebook.svg" alt="logo facebook" class="iconosRedes"></a>
+      <a href="#"><img src="Imagenes/instagram.svg" alt="logo instagram" class="iconosRedes"></a>
     </div>
 
     <div class="linksDerechos border-3 border-top border-dark ">
