Agregue nuevos svg y estilos

--- a/index.html
+++ b/index.html
@@ -173,13 +173,14 @@
         <h4 class="text-center p-2">¿ Contas con una pyme
           o servicio de venta al
           por mayor ?</h4>
-        <p>Escribinos un mail con tus datos y teléfono
+        <p class="txtDescripcion">Escribinos un mail con tus datos y teléfono
           y nuestros directores de venta te
           van a poder asesorar en este
           hermoso camino al éxito.</p>
       </div>
     </div>
-    <div class="redesContacto text-center">
+    <div class="redesContacto text-center pb-2">
+      <a href="#"><img src="Imagenes/envelope.svg" alt="logo texto" class="iconosRedes"></a>
       <a href="#"><img src="Imagenes/whatsapp-brands-black.svg" alt="logo whatsapp" class="iconosRedes"></a>
       <a href="#"><img src="Imagenes/facebook.svg" alt="logo facebook" class="iconosRedes"></a>
       <a href="#"><img src="Imagenes/instagram.svg" alt="logo instagram" class="iconosRedes"></a>
