--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <nav class="navbar navbar-expand-lg bg-white">
     <div class="container text-center">
       <a class="navbar-brand" href="#"><img src="Imagenes/logofliahead.png" alt="logo de la marca" class="logoNav"></a>
+      <a class=" btnNavSm p-2 rounded-pill bg-black text-white text-decoration-none border-0 float-end" href="#obteneDescuento">Obtene tu descuento</a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button>       
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav align-items-center">
           <a class="nav-link bg-white border-3 hover" aria-current="page" href="#">Quienes somos</a>
@@ -23,7 +24,7 @@
           <a class="nav-link bg-white " href="#">Contacto</a>                   
         </div>
       </div>
-      <a class="p-2 rounded-pill bg-black text-white text-decoration-none border-0 float-end" href="#obteneDescuento">Obtene tu descuento</a>   
+      <a class="btnNavLg p-2 rounded-pill bg-black text-white text-decoration-none border-0 float-end" href="#obteneDescuento">Obtene tu descuento</a>   
     </div>
   </nav> 
   
