Agregue al row del form la propiedad column-reverse asi en mobile se cambia el orden para que el texto quede antes que el form, luego en md vuelve a column-row

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container">
       <h2 class="text-center py-5">Festeja con nosotros y accede a un 25% de descuento
         en todos nuestros productos</h2>
-      <div class="row">
+      <div class="row" id="seccionFormulario">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
           <form id="formDescuento" method="post" novalidate="">
             <h4 class="mb-3 text-center">Accede a tu descuento</h4>
