--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container">
       <h2 class="text-center py-5">Festeja con nosotros y accede a un 25% de descuento
         en todos nuestros productos</h2>
-      <div class="row" id="seccionFormulario">
+      <div class="row" >
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
           <form id="formDescuento" method="post" novalidate="">
             <h4 class="mb-3 text-center">Accede a tu descuento</h4>
@@ -144,7 +144,7 @@
   </div>
   <footer class="container">
     <h3 class="text-center bold pt-5 pb-3">Contacto</h3>
-    <div class="row ">
+    <div class="row" id="seccionFormularioContacto">
       <div class="col-lg-6 col-md-6 col-sm-12 p-3">
         <form id="formContacto" method="post" novalidate="">
           <div class="mb-2">
