Agregue un container fluid al inicio xq sino en mobile se saltan los elementos

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
     </div>
   </nav> 
   
-  <div class="container" id="somosFlia">
-    <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block" id="logoflia">
-    <h1 class="text-center">Somos flia. Familia de diseño</h1>
-    <h1 class="text-center bold">10 años</h1>
+  <div class="container-fluid">
+    <div class="container" id="somosFlia">
+      <img src="Imagenes/logoflia.png" alt="logo de la marca" class="img-fluid mx-auto d-block" id="logoflia">
+      <h1 class="text-center">Somos flia. Familia de diseño</h1>
+      <h1 class="text-center bold">10 años</h1>
+    </div>
   </div>
+ 
 
     <h2 class="text-center bold mb-5">Productos</h2>
     <div class="container-carusel" id="containerProductos">
