--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-       <title>Langing Page Flia</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">    <title>Langing Page Flia</title>
 </head>
 <body>
     
@@ -99,10 +99,7 @@
       </div>
     </div>
   
-
- 
-  
-  <div class="container-fluid" id="diezAños">
+    <div class="container-fluid" id="diezAños">
     <div class="container text p-5">
       <h3 class="text-center">Flia cumple 10 años y 
       queremos festejarlo con ustedes</h3>
@@ -125,7 +122,7 @@
               <label for="exampleFormControlInput1" class="form-label">Apellido</label>
               <input type="text" class="form-control border border-secondary-subtle" id="apellido" name="apellido">
             </div>
-            <div class="mb-4">
+            <div class="mb-5">
               <label for="exampleFormControlInput1" class="form-label">Mail</label>
               <input type="email" class="form-control border border-secondary-subtle" id="email" name="email">
             </div>
