--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
  
 
-    <h2 class="text-center bold mb-5">Productos</h2>
+    <h2 class="text-center mb-5">Productos</h2>
     <div class="container-carusel" id="containerProductos">
       <button id="prev"></button>
       <div class="slider">
