Agregue estilos, alineaciones, nuevas clases para algunos textos. ver querys

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <h2 class="text-center py-5">Festeja con nosotros y accede a un 25% de descuento
         en todos nuestros productos</h2>
       <div class="row" >
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
           <form id="formDescuento" method="post" novalidate="">
             <h4 class="mb-3 text-center">Accede a tu descuento</h4>
             <div class="mb-3">
@@ -130,9 +130,9 @@
               class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 ">Obtener descuento</button>
           </form>
         </div>
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
           <h4 class="text-center p-2">¿ Como obtener el descuento ?</h4>
-          <p>Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro
+          <p class="txtDescuento">Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro
             catalogo con todos los productos de Flia</p>
         </div>
       </div>
@@ -171,13 +171,12 @@
         </form>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 p-3">
-        <h4 class="text-center p-2">¿ Contas con una pyme
-          o servicio de venta al
-          por mayor ?</h4>
-        <p class="txtDescripcion">Escribinos un mail con tus datos y teléfono
-          y nuestros directores de venta te
-          van a poder asesorar en este
-          hermoso camino al éxito.</p>
+        <div class="textosContacto"> <h4 class="text-center p-2">¿ Contas con una pyme o servicio de venta al por mayor ?</h4>
+          <p class="txtDescripcion">Escribinos un mail con tus datos y teléfono
+            y nuestros directores de venta te
+            van a poder asesorar en este
+            hermoso camino al éxito.</p></div>
+       
       </div>
     </div>
     <div class="redesContacto text-center pb-2">
