Agregue un salto en h2 del titulo dle contendor de Descuento

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <div class="container-fluid py-3" id="obteneDescuento">
     <div class="container">
-      <h2 class="text-center py-5">Festeja con nosotros y accede a un 25% de descuento
+      <h2 class="text-center py-5">Festeja con nosotros y accede a un 25% de descuento <br class="saltolg">
         en todos nuestros productos</h2>
       <div class="row" >
         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
