Agregue mas estilos, acomode el tamaño del logo del incio, los textos del descuento...

--- a/index.html
+++ b/index.html
@@ -131,9 +131,11 @@
           </form>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-          <h4 class="text-center p-2">¿ Como obtener el descuento ?</h4>
-          <p class="txtDescuento">Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro
-            catalogo con todos los productos de Flia</p>
+          <div class="textosDescuento">
+            <h4 class="text-center p-2">¿ Como obtener el descuento ?</h4>
+            <p class="txtDescuento">Para obtener el 25% de descuento solo tenes que llenar el formulario y luego tendras acceso a nuestro
+              catalogo con todos los productos de Flia</p>
+          </div>         
         </div>
       </div>
     </div>
