Agregue el link a cada Icono, y la barra te lleva a cada seccion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav align-items-center">
           <a class="nav-link bg-white border-3 hover" aria-current="page" href="#QuienesSomos">Quienes somos</a>
-          <a class="nav-link bg-white border-3 " href="Productos">Productos</a>
+          <a class="nav-link bg-white border-3 " href="#Productos">Productos</a>
           <a class="nav-link bg-white " href="#Contacto">Contacto</a>                   
         </div>
       </div>
@@ -183,10 +183,10 @@
       </div>
     </div>
     <div class="redesContacto text-center pb-2">
-      <a href="#"><img src="Imagenes/envelope.svg" alt="logo texto" class="iconosRedes"></a>
-      <a href="#"><img src="Imagenes/whatsapp-brands-black.svg" alt="logo whatsapp" class="iconosRedes"></a>
-      <a href="#"><img src="Imagenes/facebook.svg" alt="logo facebook" class="iconosRedes"></a>
-      <a href="#"><img src="Imagenes/instagram.svg" alt="logo instagram" class="iconosRedes"></a>
+      <a href="mailto:info@flia.com.ar"><img src="Imagenes/envelope.svg" alt="Mail a flia" class="iconosRedes"></a>
+      <a href="https://api.whatsapp.com/send?phone=+549115572-8064&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Flia."><img src="Imagenes/whatsapp-brands-black.svg" alt="logo whatsapp" class="iconosRedes"></a>
+      <a href="https://www.facebook.com/Flia.BsAs"><img src="Imagenes/facebook.svg" alt="logo facebook" class="iconosRedes"></a>
+      <a href="https://www.instagram.com/flia.ba/?hl=es-la"><img src="Imagenes/instagram.svg" alt="logo instagram" class="iconosRedes"></a>
     </div>
 
     <div class="linksDerechos border-3 border-top border-dark ">
