add un script de Tooltip de Bootstrap

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <input type="email" class="form-control border border-secondary-subtle" id="email" name="email">
             </div>
             <button id="btnEnviarDescuento" type="button"
-              class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 ">Obtener descuento</button>
+              class="btn btn-primary text-center mx-auto d-block rounded-pill border-0">Obtener descuento</button>
           </form>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 container-descuento">
@@ -183,10 +183,10 @@
       </div>
     </div>
     <div class="redesContacto text-center pb-2">
-      <a href="mailto:info@flia.com.ar"><img src="Imagenes/envelope.svg" alt="Mail a flia" class="iconosRedes"></a>
-      <a href="https://api.whatsapp.com/send?phone=+549115572-8064&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Flia." ><img src="Imagenes/whatsapp-brands-black.svg" alt="logo whatsapp" class="iconosRedes" ></a>
-      <a href="https://www.facebook.com/Flia.BsAs"><img src="Imagenes/facebook.svg" alt="logo facebook" class="iconosRedes"></a>
-      <a href="https://www.instagram.com/flia.ba/?hl=es-la"><img src="Imagenes/instagram.svg" alt="logo instagram" class="iconosRedes"></a>
+      <a href="mailto:info@flia.com.ar"><img src="Imagenes/envelope.svg" alt="Mail a flia" class="iconosRedes" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Mandanos un mail"></a>
+      <a href="https://api.whatsapp.com/send?phone=+549115572-8064&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Flia." ><img src="Imagenes/whatsapp-brands-black.svg" alt="logo whatsapp" class="iconosRedes" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Hablanos al Whatsapp" ></a>
+      <a href="https://www.facebook.com/Flia.BsAs"><img src="Imagenes/facebook.svg" alt="logo facebook" class="iconosRedes" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Seguinos en Face"></a>
+      <a href="https://www.instagram.com/flia.ba/?hl=es-la"><img src="Imagenes/instagram.svg" alt="logo instagram" class="iconosRedes" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Seguinos en Insta"></a>
     </div>
 
     <div class="linksDerechos border-3 border-top border-dark ">
