Disminui la sombra del btn descuento

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <h2 class="text-center mb-5" id="Productos">Productos</h2>
     <div class="container-carusel" id="containerProductos">
-      <button id="prev"></button>
+      <button id="prev"><</button>
       <div class="slider">
         <div class="item">
           <img src="Imagenes/Aromatizante 01.jpg" alt="">
@@ -66,13 +66,13 @@
           <img src="Imagenes/Aromatizante 01.jpg" alt="">
         </div>
         <div class="item">
-          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+          <img src="Imagenes/Individual reversible 02.jpg" alt="">
         </div>
         <div class="item">
-          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+          <img src="Imagenes/Posavasos 01.jpg" alt="">
         </div>
         <div class="item">
-          <img src="Imagenes/Aromatizante 01.jpg" alt="">
+          <img src="Imagenes/Organizador 03.jpg" alt="">
         </div>
       </div>
       <div>
