add class btn to style and bold and bg-black to the btn

--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
                       <button type="button" class="btn btn-secondary text-center mx-auto d-block rounded-pill border-0 btn-anterior">
                         < Anterior
                       </button> 
-                      <button id="btn-enviar" type="submit" class="btn btn-primary text-center mx-auto d-block rounded-pill border-0">
-                        Enviar
+                      <button id="btn-enviar" type="submit" class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 bg-black bold">
+                        Obtene tu descuento
                       </button>
                     </div>
                   </div>
