--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
+  <link rel="icon" type="image/png" href="Imagenes/favicon2.png">
   <title>Langing Page Flia</title>
 </head>
 
@@ -175,18 +176,16 @@
 
                     <div class="mb-3">
                       <label for="usuario" class="form-label">Nombre de usuario</label>
-                      <input class="form-control border border-secondary-subtle" type="text" name="usuario" id="usuario"
-                        placeholder="">
+                      <input class="form-control border border-secondary-subtle" type="text" name="usuario" id="usuario">
                     </div>
                     <div class="mb-3">
                       <label for="email" class="form-label">Email</label>
-                      <input class="form-control border border-secondary-subtle" type="email" name="email" id="email"
-                        placeholder="">
+                      <input class="form-control border border-secondary-subtle" type="email" name="email" id="email">
                     </div>
                     <div class="mb-3">
                       <label for="contraseña" class="form-label">Contraseña</label>
                       <input class="form-control border border-secondary-subtle" type="password" name="contraseña"
-                        id="contraseña" placeholder="">
+                        id="contraseña">
                     </div>
                     <div class="d-flex justify-content-center">
                       <button type="button" class="btn btn-primary text-center mx-auto d-block rounded-pill border-0 btn-siguiente">
@@ -201,43 +200,39 @@
                     <div class="row">
                       <div class="mb-3 col-6">
                         <label for="nombre" class="form-label">Nombre</label>
-                        <input class="form-control border border-secondary-subtle" type="text" name="nombre" id="nombre"
-                          placeholder="">
+                        <input class="form-control border border-secondary-subtle" type="text" name="nombre" id="nombre">
                       </div>
                       <div class="mb-3 col-6">
                         <label for="apellido" class="form-label">Apellido</label>
-                        <input class="form-control border border-secondary-subtle" type="text" name="apellido"
-                          id="apellido" placeholder="">
+                        <input class="form-control border border-secondary-subtle" type="text" name="apellido" id="apellido">
                       </div>
                       <div class="mb-3 col-6">
                         <label for="telefono" class="form-label">Telefono</label>
                         <input class="form-control border border-secondary-subtle" type="text" name="telefono"
-                          id="telefono" placeholder="">
+                          id="telefono">
                       </div>
                       <div class="mb-3 col-6">
                         <label for="pais" class="form-label">Pais</label>
-                        <input class="form-control border border-secondary-subtle" type="text" name="pais" id="pais"
-                          placeholder="">
+                        <input class="form-control border border-secondary-subtle" type="text" name="pais" id="pais">
                       </div>
                       <div class="mb-3 col-6">
                         <label for="provincia" class="form-label">Provincia/Estado</label>
                         <input class="form-control border border-secondary-subtle" type="text" name="provincia"
-                          id="provincia" placeholder="">
+                          id="provincia">
                       </div>
                       <div class="mb-3 col-6">
                         <label for="ciudad" class="form-label">Ciudad</label>
-                        <input class="form-control border border-secondary-subtle" type="text" name="ciudad" id="ciudad"
-                          placeholder="">
+                        <input class="form-control border border-secondary-subtle" type="text" name="ciudad" id="ciudad">
                       </div>
                       <div class="mb-3 col-6">
                         <label for="direccion" class="form-label">Direccion</label>
                         <input class="form-control border border-secondary-subtle" type="text" name="direccion"
-                          id="direccion" placeholder="">
+                          id="direccion">
                       </div>
                       <div class="mb-3 col-6">
                         <label for="codigoPostal" class="form-label">Codigo postal</label>
                         <input class="form-control border border-secondary-subtle" type="text" name="codigoPostal"
-                          id="codigoPostal" placeholder="">
+                          id="codigoPostal">
                       </div>
                     </div>
                     <div class="d-flex justify-content-center">
@@ -265,7 +260,7 @@
                       </div>
                       <div class="col-12 mb-3">
                         <label for="cardNumber" class="form-label">Numero de tarjeta</label>
-                        <input class="form-control border border-secondary-subtle" type="email" name="cardNumber" id="cardNumber" placeholder="">
+                        <input class="form-control border border-secondary-subtle" type="text" name="cardNumber" id="cardNumber" placeholder="">
                       </div>
                       <div class="row">
                         <label for="expirationDate" class="form-label">Fecha de vencimiento</label>
@@ -396,13 +391,15 @@
       </div>
     </footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>-->
   <script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="script/traduccionesValidate.js"></script>
+  <script src="script/catalogo.js"></script>
   <script src="script/main.js"></script>
 </body>
 
