add sticky top to the navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-white">
+  <nav class="navbar sticky-top navbar-expand-lg bg-white">
     <div class="container text-center">
       <a class="navbar-brand" href="#"><img src="Imagenes/logofliahead.png" alt="logo de la marca" class="logoNav"></a>
       <a class=" btnNavSm p-2 rounded-pill bg-black text-white text-decoration-none border-0 float-end"
