--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
                               <p>¿Deseas crear la cuenta?</p>
                             </div>
                             <div class="modal-footer">
-                              <button id="btn-cancelar" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                              <button id="btn-confirmar" type="button" class="btn btn-primary" data-bs-dismiss="modal">Confirmar</button>
+                              <button id="btn-cancelar" type="submit" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                              <button id="btn-confirmar" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Confirmar</button>
                             </div>
                           </div>
                         </div>
