Modifique los links del footer

--- a/index.html
+++ b/index.html
@@ -406,11 +406,10 @@
       </div>
 
       <div class="linksDerechos border-3 border-top border-dark ">
-        <div class="mt-3 mb-3 text-center"> <a href="http://www.flia.com.ar/"
-            class="p-2 border-3 border-end border-dark bg-transparent text-dark text-decoration-none"> © 2023 Flia </a>
-          <a href="" class="p-2 border-3 border-end border-dark bg-transparent text-dark text-decoration-none">
-            Politicas
-            de privacidad</a>
+        <div class="mt-3 mb-3 text-center footer-link"> 
+          <a href="http://www.flia.com.ar/" class="p-2 border-3 bg-transparent text-dark text-decoration-none"> © 2023 Flia </a>
+          <a href="" class="p-2 border-3 text-dark text-decoration-none">
+            Politicas de privacidad</a>
           <a href="" class="p-2  bg-transparent text-dark text-decoration-none"> Terminos de servicio</a>
         </div>
       </div>
